# carricato_todolist

./: CMakeLists.txt  main.cpp
inc/: Date.h  DateTime.h  Location.h  Task.h  TimeOfDay.h  ToDoList.h
src/: Date.cpp  DateTime.cpp  Location.cpp  Task.cpp  TimeOfDay.cpp  ToDoList.cpp
test/: CMakeLists.txt  DateTest.cpp  DateTimeTest.cpp  LocationTest.cpp  TaskTest.cpp  TimeOfDayTest.cpp  ToDoListTest.cpp  mainTest.cpp
